--- a/src/react/index.css
+++ b/src/react/index.css
@@ -1,68 +1,78 @@
+@import 'tailwindcss';
+
+@theme {
+	--color-primary-lime: #8cbe22;
+	--color-primary-lime-muted: #577713;
+
+	--color-primary-orange: #f7852f;
+	--color-primary-orange-muted: #cc6f28;
+
+	--color-bg-light: #fff;
+	--color-bg-dark: #242424;
+
+	--color-text-light: #3c3c43;
+	--color-text-dark: #dfdfd6;
+
+	--color-muted: #adadad;
+	--color-muted-light: #67676c;
+	--color-muted-dark: #98989f;
+
+	--color-border-dark: #e2e2e3;
+	--color-border-dark: #2e2e32;
+}
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+* {
+	-webkit-tap-highlight-color: transparent;
+	padding: 0;
+	margin: 0;
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+	/* font-family:
+		'Inter', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+		'Segoe UI Symbol', 'Noto Color Emoji'; */
+	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+	color-scheme: light dark;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+	margin: 0;
+	display: flex;
+	place-items: center;
+	min-width: 320px;
+	width: 100%;
+	min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+html.light {
+	color: var(--color-text-light);
+	background-color: var(--color-bg-light);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+html.dark {
+	color: var(--color-text-dark);
+	background-color: var(--color-bg-dark);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+#root {
+	min-width: 100%;
+	min-height: 100vh;
+}
+
+.dev {
+	border: 1px solid red;
+}
+
+*:focus-visible {
+	outline: none;
 }
