--- a/src/react/index.css
+++ b/src/react/index.css
@@ -30,9 +30,6 @@
 }
 
 :root {
-	/* font-family:
-		'Inter', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-		'Segoe UI Symbol', 'Noto Color Emoji'; */
 	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
@@ -75,4 +72,12 @@ html.dark {
 
 *:focus-visible {
 	outline: none;
+}
+
+.shadow-lime {
+	filter: drop-shadow(0 0 2em var(--color-primary-lime));
+}
+
+.shadow-orange {
+	filter: drop-shadow(0 0 2em var(--color-primary-orange));
 }
