--- a/src/react/index.css
+++ b/src/react/index.css
@@ -8,7 +8,7 @@
 	--color-primary-orange-muted: #cc6f28;
 
 	--color-bg-light: #fff;
-	--color-bg-dark: #242424;
+	--color-bg-dark: var(--color-neutral-900);
 
 	--color-text-light: #3c3c43;
 	--color-text-dark: #dfdfd6;
@@ -17,8 +17,11 @@
 	--color-muted-light: #67676c;
 	--color-muted-dark: #98989f;
 
-	--color-border-dark: #e2e2e3;
-	--color-border-dark: #2e2e32;
+	--color-card-bg-light: var(--color-neutral-800);
+	--color-card-bg-dark: var(--color-neutral-800);
+
+	--color-border-light: var(--color-neutral-700);
+	--color-border-dark: var(--color-neutral-700);
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
