--- a/src/react/index.css
+++ b/src/react/index.css
@@ -75,3 +75,7 @@ html.dark {
 .shadow-lime {
 	filter: drop-shadow(0 0 2em var(--color-primary));
 }
+
+.splash-logo {
+	filter: drop-shadow(0 0 2em #9abc39);
+}
